--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
+    "openai": "^4.80.1",
     "pg": "^8.13.1"
   },
   "devDependencies": {
